<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="315dp"
    android:background="@color/transparent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/font_size_10"
            android:layout_marginRight="@dimen/font_size_10"
            android:background="@drawable/common_shape_gray_radius5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/market_order_time"
                android:textColor="@color/color_gray_dark2"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/et_market_activity_history_filter_start_time"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_shape_gray_radius3"
                    android:drawableRight="@drawable/ic_my_assets_open"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/market_order_start_time"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:textColor="@color/gray_text_line"
                    android:textSize="@dimen/font_size_12" />

                <View
                    android:layout_width="14dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="3dp"
                    android:background="@color/gray_text_line"
                    android:gravity="center_horizontal" />

                <EditText
                    android:id="@+id/et_market_activity_history_filter_end_time"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_shape_gray_radius3"
                    android:drawableRight="@drawable/ic_my_assets_open"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/market_order_stop_time"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:textColor="@color/gray_text_line"
                    android:textSize="@dimen/font_size_12" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/market_order_trade_coins"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/et_market_activity_history_filter_compare_coin"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_shape_gray_radius3"
                    android:drawableRight="@drawable/ic_my_assets_open"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/market_order_select_currency"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:textColor="@color/color_gray_dark2"
                    android:textSize="@dimen/font_size_12" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/market_order_trade_type"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_market_activity_history_filter_order_buy"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_wtjl_gouxxuan"
                    android:text="@string/market_order_trade_buy"
                    android:textColor="@color/color_red_light"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/btn_market_activity_history_filter_order_sell"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_shape_gray_radius3"
                    android:text="@string/market_order_trade_sell"
                    android:textColor="@color/color_gray_dark"
                    android:textSize="12sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/color_gray_light1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_market_activity_history_filter_reset"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_shape_left_radius5"
                    android:text="@string/market_order_reset"
                    android:textColor="@color/color_gray_dark2" />

                <Button
                    android:id="@+id/btn_market_activity_history_filter_search"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_shape_right_red_radius5"
                    android:text="@string/market_order_search"
                    android:textColor="@color/color_white2" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_market_activity_history_filter_operate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="vertical"
            android:background="@color/color_white"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_market_activity_history_filter_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/market_order_cancel"
                android:textColor="@color/color_gray_dark2"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tv_market_activity_history_filter_complete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/market_order_complete"
                android:textColor="@color/color_gray_dark2"
                android:textSize="15sp"
                />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_light1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_market_activity_history_filter_end_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:orientation="horizontal"
            android:visibility="gone">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_market_activity_history_filter_start_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:orientation="horizontal"
            android:visibility="gone">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_market_activity_history_filter_coin_compare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:orientation="horizontal"
            android:visibility="gone">



        </LinearLayout>


    </FrameLayout>

</FrameLayout>
