<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/tv_trade_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="9368.10"
            android:textColor="@color/color_red_light"
            android:textSize="@dimen/font_size_24" />

        <TextView
            android:id="@+id/tv_trade_price_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_trade_price"
            android:layout_marginLeft="9dp"
            android:layout_toRightOf="@id/tv_trade_price"
            android:text="≈5800.65"
            android:textColor="@color/color_gray_dark1"
            android:textSize="@dimen/font_size_12" />

        <TextView
            android:id="@+id/tv_trade_price_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="+5.89%"
            android:textColor="@color/color_red_light"
            android:textSize="@dimen/font_size_18" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_trade_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_order_buy_files"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/market_trade_number"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trade_buy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_trade_buy"
                android:layout_marginTop="10dp" />


        </RelativeLayout>

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_trade_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_order_sell_files"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/market_trade_number"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trade_sell"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_trade_sell"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:layout_marginTop="30dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/common_corner_stroke_gray">

            <EditText
                android:id="@+id/et_trade_input_price"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:hint="@string/market_trade_price"
                android:background="@null"
                android:paddingLeft="13dp"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/color_gray_dark2"
                android:textColorHint="@color/color_gray_dark1"
                android:textSize="@dimen/font_size_14" />

            <View
                android:layout_width="0.4dp"
                android:layout_height="match_parent"
                android:background="@color/color_gray_light3" />


            <RelativeLayout
                android:id="@+id/btn_trade_reduce"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                style="@style/common_btn_ripple_bg">


                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="2dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_mkt_reduce"/>

            </RelativeLayout>

            <View
                android:layout_width="0.4dp"
                android:layout_height="match_parent"
                android:background="@color/color_gray_light3" />


            <RelativeLayout
                android:id="@+id/btn_trade_add"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                style="@style/common_btn_ripple_bg">


                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_mkt_plus"/>

            </RelativeLayout>


        </LinearLayout>



        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/common_corner_stroke_gray"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_trade_limit_order"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_14" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_trade_input_price_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/font_size_11"
        android:textColor="@color/color_gray_dark1"
        android:textSize="@dimen/font_size_12"
        android:text="≈0.00 CNY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/common_corner_stroke_gray"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">


        <EditText
            android:id="@+id/et_trade_input_number"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/market_trade_number"
            android:paddingLeft="13dp"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@color/color_gray_dark2"
            android:textColorHint="@color/color_gray_dark1"
            android:textSize="@dimen/font_size_14" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray_light3" />


        <TextView
            android:id="@+id/btn_trade_1_4"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="1/4"
            android:textColor="@color/color_gray_dark"
            style="@style/common_btn_ripple_bg"
            android:textSize="@dimen/font_size_12" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray_light3" />


        <TextView
            android:id="@+id/btn_trade_1_2"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="1/2"
            android:textColor="@color/color_gray_dark"
            style="@style/common_btn_ripple_bg"
            android:textSize="@dimen/font_size_12" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray_light3" />


        <TextView
            android:id="@+id/btn_trade_3_4"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="3/4"
            android:textColor="@color/color_gray_dark"
            style="@style/common_btn_ripple_bg"
            android:textSize="@dimen/font_size_12" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray_light3" />


        <TextView
            android:id="@+id/btn_trade_all"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/market_order_all"
            android:textColor="@color/color_gray_dark"
            style="@style/common_btn_ripple_bg"
            android:textSize="@dimen/font_size_12" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_trade_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_12"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_gray_dark1"
        android:text="@string/market_trade_available"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_15"
            android:layout_centerVertical="true"
            android:textColor="@color/color_gray_dark2"
            android:text="@string/market_trade_transaction_amount"/>

        <TextView
            android:id="@+id/tv_trade_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_15"
            android:textColor="@color/color_gray_dark2"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_trade_translation_unit"
            android:text="0.00"/>

        <TextView
            android:id="@+id/tv_trade_translation_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_15"
            android:textColor="@color/color_gray_dark2"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="USDT"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_trade_commit"
        style="@style/common_btn_corner_green_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/market_trade_buy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/color_gray_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/color_gray_dark1"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:text="@string/market_order_current_title"
            android:textStyle="bold" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/color_gray_light">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_11"
            android:gravity="left"
            android:paddingLeft="15dp"
            android:textColor="@color/color_gray_dark1"
            android:text="@string/market_order_type" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="@dimen/font_size_11"
            android:textColor="@color/color_gray_dark1"
            android:text="@string/market_trade_price" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="@dimen/font_size_11"
            android:textColor="@color/color_gray_dark1"
            android:text="@string/market_order_valume" />

        <TextView
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_11"
            android:gravity="center"
            android:textColor="@color/color_gray_dark1"
            android:text="@string/market_trade_operation" />

    </LinearLayout>

</LinearLayout>